# book-Python

./: .gitignore  README.md  book-Python.tex  build.md  cover.tex  preface.tex  refs.bib
chapter/: ch00.tex  ch01.tex  ch02.tex  ch03.tex  ch04.tex  ch05.tex  ch06.tex  ch07.tex  ch08.tex  ch09.tex  ch10.tex  ch11.tex  ch12.tex  ch13.tex
code/ch3/flatlayout_demo/flatlayout_demo/: calc.py
code/ch3/srclayout_demo/: pyproject.toml
code/ch3/srclayout_demo/src/srclayout_demo/: __init__.py
code/ch4/: ch4.ipynb  demo_pydantic.py  main.py  newtype_demo.py  pyproject.toml  typeignore_demo.py  typevar_demo.py
code/ch5/: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml
code/ch5/src/: demo_black.py  fruit1.py  fruit2.py
code/ch5/src/ch5/: __init__.py
code/cython_demo/: pyproject.toml  run_app.py  setup.py
code/cython_demo/src/cython_demo/: __init__.py  analyzer.py  calculator.py
code/flatlayout_demo/: main.py  pyproject.toml
code/flatlayout_demo/flatlayout_demo/: main.py
code/flatlayout_demo/tests/: test_calc.py
code/fxb/: .env  .env.private  .env.pydantic  .python-version  Dockerfile  README.md  ch6.ipynb  pi_analysis.prof  pi_cython.pyx  pi_profile.prof  pi_pstats.prof  pyproject.toml  setup.py
code/fxb/src/fxb/: __init__.py  main.py
code/fxb/src/fxb/ch06/: DIP2.py  LSP.py  OCP.py  SRP.py  strategy.py
code/fxb/src/fxb/ch07/: gil_cpu.py  process_compare.py  process_executor.py  process_manager.py  process_pipe.py  process_queue.py  thread_condition.py  thread_counter.py  thread_usage.py
code/fxb/src/fxb/ch08/: async_file.py  async_http.py  async_to_sync.py  cancel_example.py  coroutine_basic.py  exception_handling.py  sync_to_async.py  task_concurrency.py  task_group.py  task_management.py  timeout_example.py
code/fxb/src/fxb/ch09/: attribute_lookup_demo.py  benchmark_cython.py  buildins_demo.py  itertools_demo.py  memory_gc_demo.py  memory_leak_demo.py  memory_profiler_demo.py  memory_slots_demo.py  memory_slots_demo2.py  memory_tracemalloc_demo.py  pi.py  pi_optimized.py  pi_profile.py  pi_pstats.py
code/fxb/src/fxb/ch10/: calculator.py  weather.py
code/fxb/src/fxb/ch11/: config.json  config.toml  config.yaml  config_demo.py  config_hot_reload.py  env_demo.py  environment.py  pydantic_demo.py
code/fxb/src/fxb/ch12/: breakpoint_demo.py  env_aware_logging.py  logging_demo.py  loguru_demo.py  metrics_demo.py  pdb_demo.py  prometheus.yml  remote_debug_demo.py  remote_debug_demo2.py  structlog_demo.py  tracing_demo.py
code/fxb/src/fxb/ch6/: DIP.py  ISP.py  singleton.py
code/fxb/src/fxb/ch7/: gil_io.py  process_executor.py  process_pipe2.py  process_pool.py  process_shared.py  thread_event.py  thread_pool.py  thread_queue.py
code/fxb/tests/: test_math.py
code/fxb/tests/ch10/: test_calculator.py  test_parametrize.py  test_user.py  test_weather.py  test_weather2.py
figures/: python.drawio
