[project]
name = "fxb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "夏天", email = "xiat@ruc.edu.cn" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.128.0",
    "flameprof>=0.4",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "memory-profiler>=0.61.0",
    "numpy>=2.3.5",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
    "watchdog>=6.0.0",
]

[project.scripts]
fxb = "fxb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cython>=3.2.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "setuptools>=80.9.0",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
