[project]
name = "srclayout-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "夏天", email = "xiat@ruc.edu.cn" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
srclayout-demo = "srclayout_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
